# jinja2_components

./: Pipfile  README.md  TODO.rst  pyproject.toml  setup.py
doc/: index.rst
jinja2_component/: active_checker.py  cache.py  context.py  environment.py  extension.py  resolver.py
jinja2_component/test/: t1.html
src/jinja2_components/: context.py  environment.py  extension.py  injector.py  resolver.py  service.py
src/jinja2_components/test/: __init__.py
tests/: README.txt  conftest.py  test_cache.py  test_component.py  test_component_environment.py  test_component_extension.py  test_context.py  test_environment.py  test_layout.py  test_props.py  test_readme.py  test_resolver.py  test_root.py
tests/doc/: tour.rst
tests/newstyle/: conftest.py  test_basic_template_parsing.py  test_newstyle.py  wrapper.html
tests/templates/: root01.html  t2.html
tests/wrap/: conftest.py  test_wrap.py
