[project]
name = "jinja2-components"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "html5lib>=1.1",
    "jinja2>=3.1.6",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black",
    "tdom",
]

[tool.uv.sources]
black = { git = "https://github.com/davepeck/black", branch = "pep750-support" }
tdom = { git = "https://github.com/WebReflection/tdom" }
